2007-04-17  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/itassert.cpp, itpp/base/math/elem_math.h,
	itpp/base/parser.cpp, itpp/comm/error_counters.cpp,
	itpp/comm/llr.h, itpp/protocol/selective_repeat.cpp,
	itpp/protocol/tcp.cpp, itpp/srccode/vq.cpp: Added missing #include
	<cstdlib> and <limits> header files. This fixes problems with
	building using GCC 4.3 snapshot. Thanks to Martin Michlmayr from
	the Debian project for reporting this bug.
	(merged rev. 1005:1006 from the itpp-3-10 branch)
	
2007-04-12  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/itassert.cpp: Fixed a problem with not displayed
	assert and error messages, which was introduced in rev. 982.

==============================================================================
	
2007-04-10  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.10.10 released (SVN tag: release-3-10-10)
	(merged rev. 999:1000 from the itpp-3-10 branch)

	* NEWS-3.10: Updated to reflect recent changes
	(merged rev. 999:1000 from the itpp-3-10 branch)

	* TODO: Updated to reflect recent changes in IT++ file format
	(merged rev. 986:997 from the it_file-v3 temporary branch)

	* extras/itload.m, extras/itsave.m: Updated to be compatible with
	IT++ file format version 3. Implemented missing load functions for
	Array<Vec<T> >, Array<Mat<T> > and Array<string> types. Function
	itsave() detects the type of a saved vector or matrix and uses
	bvec, bmat, ivec, imat, vec, mat, cvec or cmat types respecively.
	(merged rev. 986:997 from the it_file-v3 temporary branch)

	* itpp/base/binfile.cpp, itpp/base/binfile.h,
	itpp/base/gf2mat.cpp, itpp/base/itfile.cpp, itpp/base/itfile.h,
	tests/itfile_test.cpp, tests/itfile_test.ref,
	tests/itfile_test_data.it: 
	Major changes in IT++ file format related classes:
	- the new file format (version 3) is incompatible with version 2,
	which was used in IT++ 3.10.x series; for backward compatibility
	the previous format can be handled using the it_file_old and